--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,107 +1,19 @@
-/* open-sans-regular - latin */
-@font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Open Sans Regular'), local('OpenSans-Regular'),
-         url('/styles/open-sans-v17-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/styles/open-sans-v17-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* open-sans-700 - latin */
-  @font-face {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 700;
-    src: local('Open Sans Bold'), local('OpenSans-Bold'),
-         url('/styles/open-sans-v17-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/styles/open-sans-v17-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  
-  body {
-      font-family: "Open Sans", Helvetica, sans-serif;
-      font-size: 18px;
-      margin:0;
-  }
-  
-  a {
-      color:#3e3efd;
-  }
-  
-  a:hover, a:focus {
-      color:#00f;
-  }
-  
-  a img {
-      border:0;
-  }
-  
-  .hidden {
-      position:absolute;
-      top:auto;
-      left:-10000px;
-  }
-  
-#main_form {
-	margin:0;
-	text-align:center;
-	color:#474747;
-	font-size:20px;
+
+/*body*/
+body{
+ 
+	font-size: 1rem;
+  	font-weight: normal;
+    background: #00a81cad ;
+    margin-top: 10% ;
+	
+}
+/*body*/
+
+/*header*/
+#logo{
+	width: 300px;
+	height: 300px;
 }
 
-.control {
-	font-size:20px;
-	border: solid 1px #adc0ed;
-	line-height: 100%;
-	margin: 4px 0px;
-	padding: 4px 8px;
-	position: relative;
-	vertical-align: middle;
-}
-
-.control.url {
-	height:30px;
-	width:320px;
-	padding:0 0 0 5px;
-	font-size:18px;
-	background-image:none;
-	background-color:#fff;
-	border-right:none;
-	border-radius:6px;
-	border-top-right-radius: 0px;
-	border-bottom-right-radius: 0px;
-	text-shadow: none;
-	-moz-user-select: text;
-	-webkit-user-select: text;
-}
-
-.controls #button_wave {
-	height:32px;
-	width:28px;
-	padding:0px 9px;
-	border-left: none;
-	text-indent: -999em;
-	overflow: hidden;
-	background: #fff url(/img/submit.svg) 0px 6px no-repeat;
-	transition: background-position .2s;
-	border-bottom-right-radius: 6px;
-	border-top-right-radius: 6px;
-	cursor: pointer;
-	outline:none !important;
-}
-
-.controls #button_wave:hover, .controls #button_wave:focus {
-	background: #fff url(/img/submit_on.svg) 4px 6px no-repeat;
-	outline:none !important;
-}
-
-.control.text, .control.select {
-	border-radius:6px;
-	margin-left:20px;
-	margin-bottom:2px;
-}
-
-.control.button {
-	border-radius:6px;
-	margin:20px 0px 2px 20px;
-	font-weight:bolder;
-}
+/*header*/
