--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,19 +1,336 @@
 
+/* Globals  */
+*{
+    font-family:  sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+
+/* Variables  */
+:root{
+    --color_Blue: #3f93f1;
+    --color_Dark1: #042e04;
+    --color_Dark2: #043d04f5;
+    --color_Light1: #dfdfdf;
+    --color_Light2: #c4c4c4;
+}
+
+/* =============== Sidebar =============== */
+.sidebar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 280px;
+    background-color: var(--color_Dark1);
+    transition: all .5s ease;
+    z-index: 100;
+	overflow: visible;
+	
+}
+.sidebar.close{
+    width: 78px;
+}
+
+/* ---------- Sidebar List ---------- */
+.sidebar-list{
+    height: 100%;
+    padding: 30px 0 150px 0;
+    overflow: auto;
+	text-decoration: none;
+}
+.sidebar-list::-webkit-scrollbar{
+    display: none;
+}
+.sidebar-list li{
+    transition: all .5s ease;
+}
+.sidebar-list li:hover{
+    background-color: var(--color_Dark2);
+}
+.sidebar-list li .title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all .5s ease;
+    cursor: pointer;
+}
+.sidebar-list li.active .title{
+    background-color: var(--color_Dark1);
+}
+.sidebar-list li.active .bxs-chevron-down{
+    transition: all .5s ease;
+    transform: rotate(180deg);
+}
+.sidebar-list li .title .link{
+    display: flex;
+    align-items: center;
+	text-decoration: none;
+}
+.sidebar-list li .title i{
+    height: 50px;
+    min-width: 78px;
+    text-align: center;
+    line-height: 50px;
+    color: var(--color_Light1);
+    font-size: 20px;
+}
+.sidebar-list li .title .name{
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--color_Light1);
+}
+
+/* ---------------- Submenu ------------- */
+.sidebar-list li .submenu{
+    width: 0;
+    height: 0;
+    opacity: 0;
+	cursor: pointer;
+}
+.sidebar-list li.dropdown.active .submenu{
+    width: unset;
+    height: unset;
+    opacity: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 6px 6px 14px 80px;
+    background-color: var(--color_Dark2);
+}
+.submenu .link{
+    color: var(--color_Light2);
+    font-size: 15px;
+    padding: 5px 0;
+}
+.submenu .link:hover{
+    color: #fff;
+}
+.submenu-title{
+    display: none;
+}
+
+/* ---------------- Submenu Close ------------- */
+.sidebar.close .logo-name,
+.sidebar.close .title .name,
+.sidebar.close .title .bxs-chevron-down
+{
+    display: none;
+}
+
+.sidebar.close .sidebar-list{
+    overflow: visible;
+}
+.sidebar.close .sidebar-list li{
+    position: relative;
+}
+.sidebar.close .sidebar-list li .submenu{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 100%;
+    top: -10px;
+    margin-top: 0;
+    padding: 10px 20px;
+    border-radius: 0 6px 6px 0;
+    height: max-content;
+    width:fit-content;
+    opacity: 0;
+    transition: all .5s ease;
+    pointer-events: none;
+	overflow: scroll;
+}
+.sidebar.close .sidebar-list li:hover .submenu{
+    opacity: 1;
+    top: 0;
+    pointer-events: initial;
+    background-color: var(--color_Dark2);
+}
+.sidebar.close .submenu-title{
+    display: block;
+    font-style: 18px;
+    color: var(--color_Light1);
+}
+
+/* =============== Home Section =============== */
+.home{
+    position: fixed;
+    background-color: var(--color_Light1);
+    left: 280px;
+    width: calc(100% - 280px);
+    height: 100vh;
+    transition: all .5s ease;
+	overflow: scroll;
+	padding-bottom: 20px;
+}
+.sidebar.close ~ .home{
+    left: 78px;
+    width: calc(100% - 78px);
+}
+  
+h2 {
+color: white;
+}
+h4 {
+color: blue;
+}
+.partie {
+margin-bottom: 10px;
+border-radius: 10px;
+}
+#first-card {
+	margin: 3%;
+	background-color: var(--color_Dark2); /* Couleur de fond */
+}
+
+.critere-card {
+border: none;
+border-radius: 10px;
+margin: 10px 0;
+padding: 15px;
+background-color: #f8f9fa; /* Couleur de fond */
+}
+
+.btn-submit {
+margin-top: 20px;
+}
+  
+/* ============ Responsive / Breakpoints ========== */
+@media (max-width: 1080px){
+    
+}
+
+/* For Medium Devices */
+@media (max-width: 774px){
+   
+}
+@media (max-width: 560px){
+    
+}
+
+/* For Small Devices */
+@media (max-width: 360px){
+   
+}
+
 /*body*/
 body{
- 
-	font-size: 1rem;
   	font-weight: normal;
-    background: #00a81cad ;
+    background: var(--color_Dark2) ;
     margin-top: 10% ;
 	
 }
 /*body*/
 
 /*header*/
+header{
+	text-align: center;
+}
+.title{
+	font-size:25px;
+}
+.undertitle{
+	font-size:25px;
+}
 #logo{
 	width: 300px;
 	height: 300px;
 }
+main {
+	display:block;
+	max-width: 1100px;
+	margin: 10px auto 10px auto;
+	padding:0 10px;
+	text-align:left;
+	
+}
+
+.control {
+	font-size:20px;
+	border: solid 1px #adc0ed;
+	line-height: 100%;
+	margin: 4px 0px;
+	padding: 4px 8px;
+	position: relative;
+	vertical-align: middle;
+}
+
+.control.url {
+	height:30px;
+	width:320px;
+	padding:0 0 0 5px;
+	font-size:18px;
+	background-image:none;
+	background-color:#fff;
+	border-right:none;
+	border-radius:6px;
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 0px;
+	text-shadow: none;
+	-moz-user-select: text;
+	-webkit-user-select: text;
+	margin-right: 0%;
+}
+
+.controls #button_url {
+	margin-left: 0%;
+	height:32px;
+	width:28px;
+	padding:0px 9px;
+	text-indent: -999em;
+	overflow: hidden;
+	background: #fff url(/src/img/submit.svg) 0px 6px no-repeat;
+	transition: background-position .2s;
+	border-bottom-right-radius: 6px;
+	border-top-right-radius: 6px;
+	cursor: pointer;
+	outline:none !important;
+}
+
+.controls #button_url:hover, .controls #button_url:focus {
+	background: #fff url(/src/img/submit_on.svg) 4px 6px no-repeat;
+	outline:none !important;
+}
+
+.controls #button_doc {
+	margin-left: 0%;
+	height:32px;
+	width:28px;
+	padding:0px 9px;
+	text-indent: -999em;
+	overflow: hidden;
+	background: #fff url(/src/img/submit.svg) 0px 6px no-repeat;
+	transition: background-position .2s;
+	border-bottom-right-radius: 6px;
+	border-top-right-radius: 6px;
+	cursor: pointer;
+	outline:none !important;
+}
+
+.controls #button_doc:hover, .controls #button_doc:focus {
+	background: #fff url(/src/img/submit_on.svg) 4px 6px no-repeat;
+	outline:none !important;
+}
+
+.control.text, .control.select {
+	border-radius:6px;
+	margin-left:20px;
+	margin-bottom:2px;
+}
+
+.control.button {
+	border-radius:6px;
+	margin:20px 0px 2px 20px;
+	font-weight:bolder;
+}
 
 /*header*/
+/*footer*/
+.name{
+	font-size: large;
+	color: black;
+	font-weight: bolder;
+}
+/*footer*/
